// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hamburger /> dropdown state dropdown should snapshot at each state 1`] = `
<ul
  className="dropdown"
  onMouseLeave={[Function]}
>
  <li
    className="link ham_link"
  >
    <a
      className="a_link"
      href="/home_page"
    >
      Home Page
    </a>
  </li>
  <li
    className="link ham_link"
  >
    <a
      className="a_link"
      href="/resume"
    >
      Resume
    </a>
  </li>
  <li
    className="link ham_link"
  >
    <a
      className="a_link"
      href="/home_page"
    >
      Projects
    </a>
  </li>
  <li
    className="link ham_link"
  >
    <a
      className="a_link"
      href="/contact"
    >
      Contact
    </a>
  </li>
</ul>
`;

exports[`<Hamburger /> dropdown state dropdown should snapshot at each state 2`] = `
<ul
  className="dropdown"
  onMouseLeave={[Function]}
>
  <li
    className="link ham_link"
  >
    <a
      className="a_link"
      href="/home_page"
    >
      Home Page
    </a>
  </li>
  <li
    className="link ham_link"
  >
    <a
      className="a_link"
      href="/resume"
    >
      Resume
    </a>
  </li>
  <li
    className="link ham_link"
  >
    <a
      className="a_link"
      href="/home_page"
    >
      Projects
    </a>
  </li>
  <li
    className="link ham_link"
  >
    <a
      className="a_link"
      href="/contact"
    >
      Contact
    </a>
  </li>
</ul>
`;

exports[`<Hamburger /> dropdown state dropdown should snapshot at each state 3`] = `
<ul
  className="dropdown"
  onMouseLeave={[Function]}
>
  <li
    className="link ham_link"
  >
    <a
      className="a_link"
      href="/home_page"
    >
      Home Page
    </a>
  </li>
  <li
    className="link ham_link"
  >
    <a
      className="a_link"
      href="/resume"
    >
      Resume
    </a>
  </li>
  <li
    className="link ham_link"
  >
    <a
      className="a_link"
      href="/home_page"
    >
      Projects
    </a>
  </li>
  <li
    className="link ham_link"
  >
    <a
      className="a_link"
      href="/contact"
    >
      Contact
    </a>
  </li>
</ul>
`;

exports[`<Hamburger /> state should match state of each action 1`] = `
<div
  className="libcomp-hamburger_Container font"
>
  <div
    className="ham_container"
  >
    <div
      className="hamburger"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <hr />
      <hr />
      <hr />
    </div>
  </div>
  <div
    className="dropdown_container"
  >
    <ul
      className="dropdown"
      onMouseLeave={[Function]}
    >
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/home_page"
        >
          Home Page
        </a>
      </li>
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/resume"
        >
          Resume
        </a>
      </li>
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/home_page"
        >
          Projects
        </a>
      </li>
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/contact"
        >
          Contact
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<Hamburger /> state should match state of each action 2`] = `
<div
  className="libcomp-hamburger_Container font"
>
  <div
    className="ham_container"
  >
    <div
      className="hamburger"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <hr />
      <hr />
      <hr />
    </div>
  </div>
  <div
    className="dropdown_container"
  >
    <ul
      className="dropdown"
      onMouseLeave={[Function]}
    >
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/home_page"
        >
          Home Page
        </a>
      </li>
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/resume"
        >
          Resume
        </a>
      </li>
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/home_page"
        >
          Projects
        </a>
      </li>
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/contact"
        >
          Contact
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<Hamburger /> state should match state of each action 3`] = `
<div
  className="libcomp-hamburger_Container font"
>
  <div
    className="ham_container"
  >
    <div
      className="hamburger"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <hr />
      <hr />
      <hr />
    </div>
  </div>
  <div
    className="dropdown_container"
  >
    <ul
      className="dropdown"
      onMouseLeave={[Function]}
    >
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/home_page"
        >
          Home Page
        </a>
      </li>
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/resume"
        >
          Resume
        </a>
      </li>
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/home_page"
        >
          Projects
        </a>
      </li>
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/contact"
        >
          Contact
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`setting default menu should render default 1`] = `
<div
  className="libcomp-hamburger_Container font"
>
  <div
    className="ham_container"
  >
    <div
      className="hamburger"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <hr />
      <hr />
      <hr />
    </div>
  </div>
  <div
    className="dropdown_container"
  >
    <ul
      className="dropdown"
      onMouseLeave={[Function]}
    >
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/home"
        >
          Home Page
        </a>
      </li>
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/resume"
        >
          Resume
        </a>
      </li>
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/project"
        >
          Projects
        </a>
      </li>
      <li
        className="link ham_link"
      >
        <a
          className="a_link"
          href="/contact"
        >
          Contact
        </a>
      </li>
    </ul>
  </div>
</div>
`;
